--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agents.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agents.html
@@ -4,7 +4,7 @@
 		<ul style="margin-top: 10px;" class="nav nav-list">
 			<li class="nav-header"><i class="icon-chevron-down"></i>&nbsp;Agents</li>
 			{{#each Agents}}
-			<li><a href="/composite/new/#explorer/agent/{{slugify SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a></li>
+			<li><a href="/composite/new/#explorer/agent/{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a></li>
 			{{/each}}
 		</ul>
 	</div>
