updated package, replaced caret in main inspector display

--- a/src/sdk/CompositeInspector/Assets/Styles/composite-inspector.css
+++ b/src/sdk/CompositeInspector/Assets/Styles/composite-inspector.css
@@ -15,3 +15,13 @@
 {
 	display:block;
 }
+
+.gray-caret-down {
+	margin: 0px;
+	padding: 0px;
+}
+
+.gray-caret-right {
+	margin: 0px;
+	padding: 0px;
+}
