primary navigation now mostly in place

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentWithParts.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentWithParts.html
@@ -15,7 +15,7 @@
 			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Commands</li>
 			{{/if}}
 			{{#each Commands}}
-			<li class="subNav subNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{Name}}/form">
+			<li class="subNav subNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/part/{{Name}}/form">
 				{{Name}}</a> </li>
 			{{/each}} </ul>
 		<ul class="nav nav-list">
@@ -23,7 +23,7 @@
 			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Queries</li>
 			{{/if}}
 			{{#each Queries}}
-			<li class="subNav subNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{Name}}/form">{{Name}}</a> </li>
+			<li class="subNav subNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/part/{{Name}}/form">{{Name}}</a> </li>
 			{{/each}} 
 		</ul>
 		<ul class="nav nav-list">
@@ -31,7 +31,7 @@
 			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Read Models</li>
 			{{/if}}
 			{{#each ReadModels}}
-			<li class="subNav subNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{Name}}/form">{{Name}}</a> </li>
+			<li class="subNav subNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/part/{{Name}}/form">{{Name}}</a> </li>
 			{{/each}} </ul>
 	</div>
 
