--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
@@ -2,32 +2,37 @@
 
 	<div id="inspectorMainLeft" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="nav-header"><i class="icon-chevron-down"></i>&nbsp;Agents</li>
+			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Agents</li>
 			{{#each Agents}}
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a></li>
-			{{/each}}
-			<li class="active"><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Agent
-				Name</a></li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Agent Name</a></li>
-		</ul>
+			<li class="subNav subNav-{{slugify SystemName}}"><a href="/composite/new/#explorer/agent/{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">
+				{{DescriptiveName}}</a> </li>
+			{{/each}} </ul>
 	</div>
 
 	<div id="inspectorMainCenter" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="nav-header"><i class="icon-chevron-down"></i>&nbsp;Commands</li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Command Name</a></li>
-			<li class="active"><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Command
-				Name</a></li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Command Name</a></li>
-			<li class="nav-header"><i class="icon-chevron-down"></i>&nbsp;Queries</li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Query Name</a></li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Query Name</a></li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Query Name</a></li>
-			<li class="nav-header"><i class="icon-chevron-down"></i>&nbsp;Read models</li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Read Model Name</a></li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Read Model Name</a></li>
-			<li><a class="agent" href="#" data-agent-system-name="{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">Read Model Name</a></li>
+			{{#if Commands}}
+			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Commands</li>
+			{{/if}}
+			{{#each Commands}}
+			<li class="terNav terNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/part/{{Name}}/form">
+				{{Name}}</a> </li>
+			{{/each}} </ul>
+		<ul class="nav nav-list">
+			{{#if Queries}}
+			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Queries</li>
+			{{/if}}
+			{{#each Queries}}
+			<li class="terNav terNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/part/{{Name}}/form">{{Name}}</a> </li>
+			{{/each}} 
 		</ul>
+		<ul class="nav nav-list">
+			{{#if ReadModels}}
+			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Read Models</li>
+			{{/if}}
+			{{#each ReadModels}}
+			<li class="terNav terNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/part/{{Name}}/form">{{Name}}</a> </li>
+			{{/each}} </ul>
 	</div>
 
 	<div id="inspectorMainRight" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span6">
