fixed new inspector ui issue, now need to focus on the form; deployed current version to azure in case i need to show it to someone

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
@@ -2,7 +2,7 @@
 
 	<div id="inspectorMainLeft" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Agents</li>
+			<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Agents</li>
 			{{#each Agents}}
 			<li class="subNav subNav-{{slugify SystemName}}"><a href="/composite/new/#explorer/agent/{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">
 				{{DescriptiveName}}</a> </li>
@@ -12,7 +12,7 @@
 	<div id="inspectorMainCenter" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
 			{{#if Commands}}
-			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Commands</li>
+			<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Commands</li>
 			{{/if}}
 			{{#each Commands}}
 			<li class="terNav terNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/command/{{Name}}/form">
@@ -20,7 +20,7 @@
 			{{/each}} </ul>
 		<ul class="nav nav-list">
 			{{#if Queries}}
-			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Queries</li>
+			<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Queries</li>
 			{{/if}}
 			{{#each Queries}}
 			<li class="terNav terNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/query/{{Name}}/form">{{Name}}</a> </li>
@@ -28,7 +28,7 @@
 		</ul>
 		<ul class="nav nav-list">
 			{{#if ReadModels}}
-			<li class="nav-header"><img class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Read Models</li>
+			<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Read Models</li>
 			{{/if}}
 			{{#each ReadModels}}
 			<li class="terNav terNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/readModel/{{Name}}/form">{{Name}}</a> </li>
