--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/readModel.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/readModel.html
@@ -1,7 +1,7 @@
 ﻿<form class="form-horizontal" style="margin: 15px;">
 
 <div class="control-group">
-	<h3>Publish {{SelectedPartType}}</h3>
+	<h3>View {{SelectedPartType}}</h3>
 </div>
 
 <div class="control-group">
