working on form rendering

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/command.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/command.html
@@ -1,60 +1,20 @@
 ﻿<form class="form-horizontal" style="margin: 15px;">
-
+What!?
+What!?
 <div class="control-group">
-	<h3>Publish {{SelectedPartType}}</h3>
+	<h3>Publish {{Name}}</h3>
 </div>
 
+{{#each Command.Properties}}
+
 <div class="control-group">
-	<label class="control-label" for="input01">Property Name</label>
+	<label class="control-label" for="input-{{slugify PropertyName}}">{{PropertyName}}</label>
 
 	<div class="controls">
-		<input type="text" class="input-medium" id="input01">
+		<input type="text" class="input-medium" id="input-{{slugify {{PropertyName}}}}">
 	</div>
 
 </div>
 
-<div class="control-group">
-	<label class="control-label" for="input02">Another Name</label>
-
-	<div class="controls">
-		<input type="text" class="input-medium" id="input02">
-	</div>
-
-</div>
-
-<div class="control-group">
-	<label class="control-label" for="input03">Third Name</label>
-
-	<div class="controls">
-		<input type="text" class="input-medium" id="input03">
-	</div>
-
-</div>
-
-<div class="control-group">
-	<label class="control-label" for="input04">Fourth Name</label>
-
-	<div class="controls">
-		<input type="text" class="input-medium" id="input04">
-	</div>
-
-</div>
-
-<div class="control-group">
-	<label class="control-label" for="input05">Fifth Property</label>
-
-	<div class="controls">
-		<input type="text" class="input-medium" id="input05">
-	</div>
-
-</div>
-
-<div class="control-group">
-
-	<div class="controls">
-		<button class="btn btn-primary">Publish</button>
-	</div>
-
-</div>
-
+{{/each}}
 </form>
