--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/command.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/command.html
@@ -11,7 +11,7 @@ What!?
 	<label class="control-label" for="input-{{slugify PropertyName}}">{{PropertyName}}</label>
 
 	<div class="controls">
-		<input type="text" class="input-medium" id="input-{{slugify {{PropertyName}}}}">
+		<input type="text" class="input-medium" id="input-{{slugify PropertyName}}">
 	</div>
 
 </div>
