--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/command.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/command.html
@@ -1,20 +1,24 @@
 ﻿<form class="form-horizontal" style="margin: 15px;">
-What!?
-What!?
-<div class="control-group">
-	<h3>Publish {{Name}}</h3>
-</div>
-
-{{#each Command.Properties}}
 
 <div class="control-group">
-	<label class="control-label" for="input-{{slugify PropertyName}}">{{PropertyName}}</label>
-
-	<div class="controls">
-		<input type="text" class="input-medium" id="input-{{slugify PropertyName}}">
-	</div>
-
+	<h3>{{Command.Name}}</h3>
+	<p>This composite does not have an input model registered for this command, therefore it cannot be published.</p>
+	<table class="table table-striped table-condensed">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Type</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{#each Command.Properties}}
+			<tr>
+				<td>{{PropertyName}}</td>
+				<td>{{PropertyType}}</td>
+			</tr>
+			{{/each}}
+		</tbody>
+	</table>
 </div>
 
-{{/each}}
 </form>
