working on input model template

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
@@ -1,4 +1,5 @@
 ﻿<form class="form-horizontal" style="margin: 15px;">
+{{begin-input-model-form InputModel}}
 
 <div class="control-group">
 	<h3>{{InputModel.ModelName}}</h3>
