better illustration of issue with handlebars helper. the input model form should render a form tag around the controls.

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
@@ -1,5 +1,4 @@
-﻿<form class="form-horizontal" style="margin: 15px;">
-{{begin-input-model-form InputModel}}
+﻿{{begin-input-model-form InputModel}}
 
 <div class="control-group">
 	<h3>{{InputModel.ModelName}}</h3>
