fix begin-input-model-form bug

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
@@ -1,5 +1,4 @@
-﻿{{begin-input-model-form InputModel}}
-
+﻿{{inputModelForm InputModel}}
 <div class="control-group">
 	<h3>{{InputModel.ModelName}}</h3>
 </div>
