add class name to input model form helper

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
@@ -1,4 +1,4 @@
-﻿{{inputModelForm InputModel}}
+﻿{{begin-input-model-form InputModel "form-horizontal"}}
 <div class="control-group">
 	<h3>{{InputModel.ModelName}}</h3>
 </div>
