--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
@@ -1,4 +1,4 @@
-﻿{{begin-input-model-form InputModel "form-horizontal"}}
+﻿{{begin-input-model-form InputModel "inspector-inputmodel-form form-horizontal"}}
 <div class="control-group">
 	<h3>{{InputModel.ModelName}}</h3>
 </div>
