--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentWithParts.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentWithParts.html
@@ -19,13 +19,13 @@
 				{{Name}}</a> </li>
 			{{/each}} </ul>
 		<ul class="nav nav-list">
-			{{#if Queries}}
-			<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Queries</li>
-			{{/if}}
 			{{#each Queries}}
-				<li class="subNav subNav-{{slugify Name}}">
-					<a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/query/{{Name}}/form">{{Name}}</a> 
-				</li>
+				<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;{{Name}}</li>
+				{{#each Query}}
+					<li class="subNav subNav-{{slugify this}}">
+						<a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/query/{{this}}/form">{{this}}</a> 
+					</li>
+				{{/each}} 
 			{{/each}} 
 		</ul>
 		<ul class="nav nav-list">
