working on queries

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
@@ -19,22 +19,22 @@
 				{{Name}}</a> </li>
 			{{/each}} </ul>
 		<ul class="nav nav-list">
-			{{#each Queries}}
-				<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;{{space-queries Name}}</li>
-				{{#each Query}}
-					<li class="subNav subNav-{{slugify this}}">
-						<a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/query/{{this}}/form">{{this}}</a> 
-					</li>
-				{{/each}} 
-			{{/each}} 
-		</ul>
-		<ul class="nav nav-list">
 			{{#if ReadModels}}
 			<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;Read Models</li>
 			{{/if}}
 			{{#each ReadModels}}
 			<li class="terNav terNav-{{slugify Name}}"><a href="/composite/new/#explorer/agent/{{../AgentSystemName}}/readModel/{{Name}}/form">{{Name}}</a> </li>
 			{{/each}} </ul>
+		<ul class="nav nav-list">
+			{{#each Queries}}
+				<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;{{space-queries Name}}</li>
+				{{#each Query}}
+					<li class="subNav subNav-{{slugify this}}">
+						<a href="/composite/new/#explorer/agent/{{../../AgentSystemName}}/query/{{../Name}}.{{this}}/form">{{this}}</a> 
+					</li>
+				{{/each}} 
+			{{/each}} 
+		</ul>
 	</div>
 
 	<div id="inspectorMainRight" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span6">
