--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/query.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/query.html
@@ -1,7 +1,7 @@
 ﻿<form class="form-horizontal" style="margin: 15px;">
 
 <div class="control-group">
-	<h3>Run {{Name}}</h3>
+	<h3>{{Name}}</h3>
 </div>
 
 <div class="control-group">
