--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agentPartForm.html
@@ -29,7 +29,7 @@
 			{{#each Queries}}
 				<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></i>&nbsp;{{space-queries Name}}</li>
 				{{#each Query}}
-					<li class="subNav subNav-{{slugify this}}">
+					<li class="terNav terNav-{{slugify ../Name}}{{slugify this}}">
 						<a href="/composite/new/#explorer/agent/{{../../AgentSystemName}}/query/{{../Name}}.{{this}}/form">{{this}}</a> 
 					</li>
 				{{/each}} 
