--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agents.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agents.html
@@ -1,12 +1,7 @@
 ﻿<div class="row-fluid">
 
 	<div id="inspectorMainLeft" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span3">
-		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></img>&nbsp;Agents</li>
-			{{#each Agents}}
-			<li><a href="/composite/new/#explorer/agent/{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a></li>
-			{{/each}}
-		</ul>
+		{{> agentLeftCol }}
 	</div>
 
 	<div id="inspectorMainCenter" style="background-color: whitesmoke; height: 255px; overflow-y: auto; overflow-x: hidden;" class="span3">
