--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agent/leftCol.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/agent/leftCol.html
@@ -1,7 +1,6 @@
 ﻿<ul style="margin-top: 10px;" class="nav nav-list">
-	<li class="nav-header">
-		<img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"></img>&nbsp;Agents</li>
+	<li class="nav-header"><img height="9" width="11" class="gray-caret-down" src="/composite/image/gray-caret-down.png"/>&nbsp;Agents</li>
 	{{#each Agents}}
-	<li><a href="/composite/new/#explorer/agent/{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a></li>
+		<li class="subNav subNav-{{slugify SystemName}}"><a href="/composite/new/#explorer/agent/{{SystemName}}" rel="tooltip" data-original-title="{{Description}}">{{DescriptiveName}}</a></li>
 	{{/each}} 
 </ul>
