working on a "recent" feature for inspector

--- a/src/sdk/CompositeInspector/Views/new.html
+++ b/src/sdk/CompositeInspector/Views/new.html
@@ -5,6 +5,7 @@
 	<title>New Composite Inspector</title>
 	<script type="text/javascript" src="/composite/js/jquery/jquery-1.7.1.min.js"> </script>
 	<script type="text/javascript" src="/composite/js/jquery/jquery-ui-1.8.16.custom.min.js"> </script>
+	<script type="text/javascript" src="/composite/js/jquery/jquery.cookie.js"> </script>
 	<script type="text/javascript" src="/composite/js/bootstrap/bootstrap.min.js"> </script>
 	<script type="text/javascript" src="/composite/js/handlebars/handlebars-1.0.0.beta.6.js"> </script>
 	<script type="text/javascript" src="/composite/js/handlebars/euclid-handlebars-extensions.js"></script>
