--- a/src/sdk/CompositeInspector/Views/new.html
+++ b/src/sdk/CompositeInspector/Views/new.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="/composite/js/jquery/euclid-jquery-extensions.js"> </script>
 	<script type="text/javascript" src="/composite/js/euclid-0.9.js"></script>
 	<script type="text/javascript" src="/composite/js/sammy/sammy.js"></script>
+	<script type="text/javascript" src="/composite/js/inspector/amplify.store.js"></script>
 	<script type="text/javascript" src="/composite/js/inspector/common.js"></script>
 	<script type="text/javascript" src="/composite/js/inspector/inspector.js"></script>
 	<link rel="Stylesheet" type="text/css" href="/composite/css/smoothness/jquery-ui-1.8.16.custom.css" />
