--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/inputModel.html
@@ -19,7 +19,7 @@
 <div class="control-group">
 
 	<div class="controls">
-		<button class="btn btn-primary">Publish</button>
+		<a href="/composite/new/#command-status/000-000-000" class="btn btn-primary">Publish</a>
 	</div>
 
 </div>
