--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/query.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/forms/query.html
@@ -26,7 +26,7 @@
 <div class="control-group">
 
 	<div class="controls">
-		<button class="btn btn-primary">Run Query</button>
+		<a href="/composite/new/#query-results/{{slugify Name}}" class="btn btn-primary">Run Query</a>
 	</div>
 
 </div>
