--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/commandStatus.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/commandStatus.html
@@ -1,23 +1,31 @@
 ﻿<div class="row-fluid">
 
 	<div style="background-color: whitesmoke;" class="span3">
-		<div style="margin: 5px;"><h4>NewCo Forum Agent</h4></div>
+		<ul style="margin-top: 10px;" class="nav nav-list">
+			<li class="active"><a href="#">NewCo Forum Agent</a></li>
+		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span3">
-		<div style="margin: 5px;"><h4>TestCommand</h4></div>
+		<ul style="margin-top: 10px;" class="nav nav-list">
+			<li class="active"><a href="#">TestCommand</a></li>
+		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span6">
-		<div style="margin: 5px;">Number=12, Value=AnotherValue, ...</div>
+		<ul style="margin-top: 10px;" class="nav nav-list">
+			<li class="active"><a href="#">Number=12, Value=AnotherValue, ...</a></li>
+		</ul>
 	</div>
 
 </div>
 
 <div class="row-fluid">
 
-	<div id="inspectorCommandStatus" style="background-color: whitesmoke; padding:15px; height: 180px; overflow-y: auto; overflow-x: hidden; margin-top: 15px;" class="span12">
+	<div id="inspectorCommandStatus" style="background-color: whitesmoke; padding: 15px; height: 175px; overflow-y: auto; overflow-x: hidden; margin-top: 15px;"
+		class="span12">
 		{Command status summary}
 	</div>
 
 </div>
+
