working on publication status and query results screens

--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/commandStatus.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/commandStatus.html
@@ -2,19 +2,19 @@
 
 	<div style="background-color: whitesmoke;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="active"><a href="#">NewCo Forum Agent</a></li>
+			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}">{{AgentSystemName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="active"><a href="#">TestCommand</a></li>
+			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/command/{{AgentPartName}}/form">{{AgentPartName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span6">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="active"><a href="#">Number=12, Value=AnotherValue, ...</a></li>
+			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/command/{{AgentPartName}}/form">Number=12, Value=AnotherValue, ...</a></li>
 		</ul>
 	</div>
 
