--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/queryResults.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/queryResults.html
@@ -2,19 +2,19 @@
 
 	<div style="background-color: whitesmoke;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="active"><a href="#">NewCo Forum Agent</a></li>
+			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}">{{AgentSystemName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span3">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="active"><a href="#">TestQueries.FindByName</a></li>
+			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/query/{{AgentPartName}}/form">{{AgentPartName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span6">
 		<ul style="margin-top: 10px;" class="nav nav-list">
-			<li class="active"><a href="#">Name="John Doe", ...</a></li>
+			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/query/{{AgentPartName}}/form">Name="John Doe", ...</a></li>
 		</ul>
 	</div>
 
