--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/commandStatus.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/commandStatus.html
@@ -1,19 +1,19 @@
 ﻿<div class="row-fluid">
-
+	
 	<div style="background-color: whitesmoke;" class="span3">
-		<ul style="margin-top: 10px;" class="nav nav-list">
+		<ul style="margin-top: 10px; margin-bottom: 10px;" class="nav nav-list">
 			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}">{{AgentSystemName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span3">
-		<ul style="margin-top: 10px;" class="nav nav-list">
+		<ul style="margin-top: 10px; margin-bottom: 10px;" class="nav nav-list">
 			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/command/{{AgentPartName}}/form">{{AgentPartName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span6">
-		<ul style="margin-top: 10px;" class="nav nav-list">
+		<ul style="margin-top: 10px; margin-bottom: 10px;" class="nav nav-list">
 			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/command/{{AgentPartName}}/form">Number=12, Value=AnotherValue, ...</a></li>
 		</ul>
 	</div>
@@ -22,7 +22,7 @@
 
 <div class="row-fluid">
 
-	<div id="inspectorCommandStatus" style="background-color: whitesmoke; padding: 15px; height: 175px; overflow-y: auto; overflow-x: hidden; margin-top: 15px;"
+	<div id="inspectorCommandStatus" style="background-color: whitesmoke; padding: 15px; height: 170px; overflow-y: auto; overflow-x: hidden; margin-top: 10px;"
 		class="span12">
 		{Command status summary}
 	</div>
