--- a/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/queryResults.html
+++ b/src/sdk/CompositeInspector/Assets/Scripts/inspector/templates/queryResults.html
@@ -1,19 +1,19 @@
 ﻿<div class="row-fluid">
 
 	<div style="background-color: whitesmoke;" class="span3">
-		<ul style="margin-top: 10px;" class="nav nav-list">
+		<ul style="margin-top: 10px; margin-bottom: 10px;" class="nav nav-list">
 			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}">{{AgentSystemName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span3">
-		<ul style="margin-top: 10px;" class="nav nav-list">
+		<ul style="margin-top: 10px; margin-bottom: 10px;" class="nav nav-list">
 			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/query/{{AgentPartName}}/form">{{AgentPartName}}</a></li>
 		</ul>
 	</div>
 
 	<div style="background-color: whitesmoke;" class="span6">
-		<ul style="margin-top: 10px;" class="nav nav-list">
+		<ul style="margin-top: 10px; margin-bottom: 10px;" class="nav nav-list">
 			<li class="active"><a href="/composite/new/#explorer/agent/{{AgentSystemName}}/query/{{AgentPartName}}/form">Name="John Doe", ...</a></li>
 		</ul>
 	</div>
@@ -22,9 +22,62 @@
 
 <div class="row-fluid">
 
-	<div id="inspectorCommandStatus" style="background-color: whitesmoke; padding: 15px; height: 175px; overflow-y: auto; overflow-x: hidden; margin-top: 15px;"
+	<div id="inspectorCommandStatus" style="background-color: whitesmoke; height: 200px; overflow-y: auto; overflow-x: hidden; margin-top: 10px; margin-bottom: 0px;"
 		class="span12">
-		{Query results grid}
+		<table class="table table-condensed">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>{Field}</th>
+					<th>{Field}</th>
+					<th>{Field}</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>000-000-000</td>
+					<td>Tomato groundnut</td>
+					<td>Rutabaga scallion</td>
+					<td>Kombu carrot epazote</td>
+				</tr>
+				<tr>
+					<td>000-000-000</td>
+					<td>Tomato groundnut</td>
+					<td>Rutabaga scallion</td>
+					<td>Kombu carrot epazote</td>
+				</tr>
+				<tr>
+					<td>000-000-000</td>
+					<td>Tomato groundnut</td>
+					<td>Rutabaga scallion</td>
+					<td>Kombu carrot epazote</td>
+				</tr>
+				<tr>
+					<td>000-000-000</td>
+					<td>Tomato groundnut</td>
+					<td>Rutabaga scallion</td>
+					<td>Kombu carrot epazote</td>
+				</tr>
+				<tr>
+					<td>000-000-000</td>
+					<td>Tomato groundnut</td>
+					<td>Rutabaga scallion</td>
+					<td>Kombu carrot epazote</td>
+				</tr>
+				<tr>
+					<td>000-000-000</td>
+					<td>Tomato groundnut</td>
+					<td>Rutabaga scallion</td>
+					<td>Kombu carrot epazote</td>
+				</tr>
+				<tr>
+					<td>000-000-000</td>
+					<td>Tomato groundnut</td>
+					<td>Rutabaga scallion</td>
+					<td>Kombu carrot epazote</td>
+				</tr>												
+			</tbody>
+		</table>
 	</div>
 
 </div>
